# medypt

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  imt.py  maters.py  model.py  pyproject.toml  utils.py
docs/: environment.yml
docs/source/: conf.py  examples.rst  imt.rst  index.rst  maters.rst  model.rst  modules.rst
examples/: mesh.msh  vo2.py
src/: imt.py  maters.py  model.py  utils.py
src/medypt/: imt.py  maters.py  model.py  utils.py
